--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>About</title>
     <link rel="stylesheet" href="style.css" />
 </head>
-<body style="background-color: rgb(21, 21, 33);">
+<body style="background-color: rgb(21, 21, 33);font-family: 'Arial', sans-serif;">
     <div class="abtext">
         <p>
             Hello, I'm Sanket Singh!
