--- a/chat.html
+++ b/chat.html
@@ -33,7 +33,7 @@
             <p>Connect me through my Gmail and compose a message</p>
         </div>
         <div class="link">
-            <a href="https://mail.google.com/mail/u/1/#inbox"><button>Mail</button></a>
+            <a href="mailto:singhsanket668@gmail.com"><button>Mail</button></a>
         </div>
 
     </div>
